--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=ProyectoDWS
 spring.mustache.suffix=.html
 
-
+# Habilita la excepción cuando no se encuentra una ruta
+spring.web.resources.add-mappings=false
+server.error.whitelabel.enabled=false
