--- a/ProyectoDWS/pom.xml
+++ b/ProyectoDWS/pom.xml
@@ -61,7 +61,13 @@
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
-    </dependencies>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>
+
+	</dependencies>
 
 	<build>
 		<plugins>
