--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -1,16 +1,13 @@
-spring.application.name=ProyectoDWS
-spring.mustache.suffix=.html
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.h2.console.path=/h2-console
-springdoc.api-docs.enabled=true
-springdoc.swagger-ui.enabled=true
+# Configuración de la base de datos MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=root
 
+# Driver JDBC para MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-
-
+# Configuración de Hibernate (JPA)
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
