Avances en la fase 3
Gran commit

--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -12,4 +12,16 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 
+# SSL configuration
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:key/keystore.p12
+server.ssl.key-store-password=123456
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=dwskey
 
+# Set max file size
+spring.servlet.multipart.max-file-size=50MB
+
+# Set max total request size
+spring.servlet.multipart.max-request-size=100MB
