cambios para la key correcta

--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -13,12 +13,10 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 
 # SSL configuration
-server.port=8443
-server.ssl.enabled=true
-server.ssl.key-store=classpath:key/keystore.p12
-server.ssl.key-store-password=123456
-server.ssl.key-store-type=PKCS12
-server.ssl.key-alias=dwskey
+server.port = 8443
+server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-password = password
+server.ssl.key-password = secret
 
 # Set max file size
 spring.servlet.multipart.max-file-size=50MB
