--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -15,8 +15,10 @@ spring.jpa.properties.hibernate.format_sql=true
 # SSL configuration
 server.port = 8443
 server.ssl.key-store = classpath:keystore.jks
+server.ssl.key-store-type = JKS
 server.ssl.key-store-password = password
-server.ssl.key-password = secret
+server.ssl.key-password = password
+
 
 # Set max file size
 spring.servlet.multipart.max-file-size=50MB
