--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -25,3 +25,9 @@ spring.servlet.multipart.max-file-size=50MB
 
 # Set max total request size
 spring.servlet.multipart.max-request-size=100MB
+
+# Cookie security settings
+server.servlet.session.cookie.same-site=strict
+server.servlet.session.cookie.secure=true
+server.servlet.session.cookie.http-only=true
+
