cambios para corregir el funcionamiento

--- a/ProyectoDWS/src/main/resources/application.properties
+++ b/ProyectoDWS/src/main/resources/application.properties
@@ -13,12 +13,11 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 
 # SSL configuration
-server.port = 8443
-server.ssl.key-store = classpath:keystore.jks
-server.ssl.key-store-type = JKS
-server.ssl.key-store-password = password
-server.ssl.key-password = password
-
+server.port=8443
+server.ssl.key-store=classpath:keystore.jks
+server.ssl.key-store-password=UFHJsjdis74BFIejkdf7
+server.ssl.key-password=UFHJsjdis74BFIejkdf7
+server.ssl.key-store-type=JKS
 
 # Set max file size
 spring.servlet.multipart.max-file-size=50MB
