--- a/ProyectoDWS/.gitignore
+++ b/ProyectoDWS/.gitignore
@@ -32,5 +32,5 @@ build/
 ### VS Code ###
 .vscode/
 
-###Generated Images ###
-*/src/main/resources/static/images/
+### Generated Images and videos ###
+uploads/*
